[gd_scene load_steps=7 format=2]

[ext_resource path="res://бутыль в корзине.png" type="Texture" id=1]
[ext_resource path="res://бутыль в корзине_подсветка.png" type="Texture" id=2]
[ext_resource path="res://skipidar.gd" type="Script" id=3]
[ext_resource path="res://sound/Скипидар.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 76.1837, 111.108 )

[node name="skipidar" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="skipSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="input_event" from="." to="." method="_on_skipidar_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_skipidar_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_skipidar_mouse_exited"]
